--- a/BiLSTM_NER.ipynb
+++ b/BiLSTM_NER.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "measured-banana",
+   "id": "lightweight-ethics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "helpful-surname",
+   "id": "convenient-syntax",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import matplotlib.pyplot as plt \n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch import optim\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import DataLoader\n",
+    "from etc.customUtil import showGraph, showParallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "american-netscape",
    "metadata": {},
    "outputs": [
     {
@@ -25,14 +43,6 @@
     }
    ],
    "source": [
-    "import time\n",
-    "import matplotlib.pyplot as plt \n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch import optim\n",
-    "import torch.nn.functional as F\n",
-    "from torch.utils.data import Dataset\n",
-    "from torch.utils.data import DataLoader\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
    ]
@@ -40,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cosmetic-beverage",
+   "id": "lesbian-embassy",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "exempt-toilet",
+   "id": "played-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "artistic-assist",
+   "id": "radio-modeling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "communist-cancellation",
+   "id": "loved-lounge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "manufactured-masters",
+   "id": "hourly-writer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "driving-galaxy",
+   "id": "healthy-representation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "compact-classroom",
+   "id": "every-macedonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "round-yukon",
+   "id": "accurate-bristol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "framed-michigan",
+   "id": "applicable-kelly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "final-vegetation",
+   "id": "secondary-integer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "municipal-mystery",
+   "id": "agricultural-berkeley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "certified-leisure",
+   "id": "threatened-assist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "trying-baker",
+   "id": "outer-patch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "curious-toilet",
+   "id": "earned-construction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "silent-emphasis",
+   "id": "formal-establishment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "annual-corporation",
+   "id": "hired-hacker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "statutory-samoa",
+   "id": "funded-hurricane",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "handy-treasurer",
+   "id": "pursuant-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "controversial-defensive",
+   "id": "established-scheduling",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "logical-transcription",
+   "id": "separated-entry",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +743,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "delayed-shepherd",
+   "id": "finished-flashing",
    "metadata": {},
    "source": [
     "st = time.time()\n",
@@ -746,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "frequent-aviation",
+   "id": "bound-headquarters",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "advisory-atlantic",
+   "id": "disciplinary-skating",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +844,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "waiting-hazard",
+   "id": "spoken-collins",
    "metadata": {},
    "source": [
     "sen = '박찬호 는 8 일 한국 시간 .'\n",
@@ -852,7 +862,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "hungry-bridge",
+   "id": "rough-handbook",
    "metadata": {},
    "source": [
     "sen2 = [4609,   25,   35,  116, 4610, 1562,   74,  115, 4611,   49, 4612, 1456,\n",
@@ -869,7 +879,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "random-proceeding",
+   "id": "typical-economics",
    "metadata": {},
    "source": [
     "sen = ''\n",
@@ -887,7 +897,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "understanding-cisco",
+   "id": "dominant-gallery",
    "metadata": {},
    "source": [
     "score2(model, dataset['train'], 100)\n",
@@ -898,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-observation",
+   "id": "valued-remainder",
    "metadata": {},
    "outputs": [],
    "source": []
