--- a/test.ipynb
+++ b/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "handmade-arcade",
+   "id": "first-england",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "first-garden",
+   "id": "thick-american",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "floppy-supply",
+   "id": "moral-travel",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "inclusive-quick",
+   "id": "corrected-america",
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +89,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "funded-pollution",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames2 = {'dev': 'data/korean_ner_data/dev.txt',\n",
+    "              'test': 'data/korean_ner_data/test.txt',\n",
+    "              'train': 'data/korean_ner_data/train.txt'}\n",
+    "filenames3 = {'dev': 'data/korean_ner_data/dev.dat',\n",
+    "              'test': 'data/korean_ner_data/test.dat',\n",
+    "              'train': 'data/korean_ner_data/train.dat'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "headed-afghanistan",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "effective-legend",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/korean_ner_data/dev.dat\n",
+      "data/korean_ner_data/test.dat\n",
+      "data/korean_ner_data/train.dat\n"
+     ]
+    }
+   ],
+   "source": [
+    "tt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "blessed-lemon",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          NP       1.00      1.00      1.00         1\n",
+      "\n",
+      "   micro avg       1.00      1.00      1.00         1\n",
+      "   macro avg       1.00      1.00      1.00         1\n",
+      "weighted avg       1.00      1.00      1.00         1\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          NP       0.00      0.00      0.00         1\n",
+      "\n",
+      "   micro avg       0.00      0.00      0.00         1\n",
+      "   macro avg       0.00      0.00      0.00         1\n",
+      "weighted avg       0.00      0.00      0.00         1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seqeval.metrics import classification_report\n",
+    "from seqeval.scheme import IOB2\n",
+    "y_true = [['B-NP', 'I-NP', 'O']]\n",
+    "y_pred = [['I-NP', 'I-NP', 'O']]\n",
+    "print(classification_report(y_true, y_pred))\n",
+    "#               precision    recall  f1-score   support\n",
+    "#           NP       1.00      1.00      1.00         1\n",
+    "#    micro avg       1.00      1.00      1.00         1\n",
+    "#    macro avg       1.00      1.00      1.00         1\n",
+    "# weighted avg       1.00      1.00      1.00         1\n",
+    "print(classification_report(y_true, y_pred, mode='strict', scheme=IOB2))\n",
+    "# classification_report(y_true, y_pred, mode='strict', scheme=IOB2)\n",
+    "#               precision    recall  f1-score   support\n",
+    "#           NP       0.00      0.00      0.00         1\n",
+    "#    micro avg       0.00      0.00      0.00         1\n",
+    "#    macro avg       0.00      0.00      0.00         1\n",
+    "# weighted avg       0.00      0.00      0.00         1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "purple-history",
+   "id": "tropical-spouse",
    "metadata": {},
    "outputs": [],
    "source": []
