--- a/test.ipynb
+++ b/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "first-england",
+   "id": "productive-emergency",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "thick-american",
+   "id": "resistant-homeless",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "moral-travel",
+   "id": "caroline-spray",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "corrected-america",
+   "id": "affiliated-oregon",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "funded-pollution",
+   "id": "republican-organ",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "headed-afghanistan",
+   "id": "perceived-scenario",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "effective-legend",
+   "id": "contemporary-investment",
    "metadata": {},
    "outputs": [
     {
@@ -132,38 +132,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "blessed-lemon",
+   "execution_count": 17,
+   "id": "integral-burden",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.6\n",
+      "1.0\n",
+      "0.5\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "          NP       1.00      1.00      1.00         1\n",
+      "          PS       1.00      1.00      1.00         1\n",
+      "          zz       1.00      1.00      1.00         1\n",
       "\n",
-      "   micro avg       1.00      1.00      1.00         1\n",
-      "   macro avg       1.00      1.00      1.00         1\n",
-      "weighted avg       1.00      1.00      1.00         1\n",
+      "   micro avg       1.00      1.00      1.00         3\n",
+      "   macro avg       1.00      1.00      1.00         3\n",
+      "weighted avg       1.00      1.00      1.00         3\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          NP       0.00      0.00      0.00         1\n",
+      "          NP       1.00      1.00      1.00         1\n",
+      "          PS       0.00      0.00      0.00         1\n",
+      "          zz       0.00      0.00      0.00         1\n",
       "\n",
-      "   micro avg       0.00      0.00      0.00         1\n",
-      "   macro avg       0.00      0.00      0.00         1\n",
-      "weighted avg       0.00      0.00      0.00         1\n",
+      "   micro avg       1.00      0.33      0.50         3\n",
+      "   macro avg       0.33      0.33      0.33         3\n",
+      "weighted avg       0.33      0.33      0.33         3\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from seqeval.metrics import classification_report\n",
+    "from seqeval.metrics import classification_report,accuracy_score,f1_score\n",
     "from seqeval.scheme import IOB2\n",
-    "y_true = [['B-NP', 'I-NP', 'O']]\n",
-    "y_pred = [['I-NP', 'I-NP', 'O']]\n",
+    "y_true = [['B-zz', 'B-PS'],['B-NP', 'I-NP', 'O']]\n",
+    "y_pred = [['I-zz', 'I-PS'],['B-NP', 'I-NP', 'O']]\n",
+    "# y_true = [[0, 1],[0, 1, 2]]\n",
+    "# y_pred = [[1, 1],[0, 1, 2]]\n",
+    "print(accuracy_score(y_true, y_pred))\n",
+    "print(f1_score(y_true, y_pred))\n",
+    "print(f1_score(y_true, y_pred, mode='strict', scheme=IOB2))\n",
+    "\n",
+    "\n",
     "print(classification_report(y_true, y_pred))\n",
     "#               precision    recall  f1-score   support\n",
     "#           NP       1.00      1.00      1.00         1\n",
@@ -182,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tropical-spouse",
+   "id": "rocky-birth",
    "metadata": {},
    "outputs": [],
    "source": []
