POS 스코어 연산 효율 상향
데이터를 적절한 디바이스로 이동

--- a/Char_BiLSTM_CRF-POS.ipynb
+++ b/Char_BiLSTM_CRF-POS.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "spare-platinum",
+   "id": "abroad-increase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "desperate-confidentiality",
+   "id": "swiss-corruption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dimensional-tanzania",
+   "id": "constitutional-surgeon",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "incident-jerusalem",
+   "id": "level-forth",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "reasonable-tension",
+   "id": "disturbed-niagara",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mental-alcohol",
+   "id": "marine-change",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "revised-spider",
+   "id": "obvious-nicholas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "initial-entrance",
+   "id": "handy-directory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,8 @@
     "        x_train, y_train = samples\n",
     "        \n",
     "        tagged = model(engdict, device, x_train, lossmode=False)\n",
-    "        tagged = torch.tensor(tagged, device=device)\n",
+    "        tagged = torch.tensor(tagged)\n",
+    "        y_train = y_train.to('cpu')\n",
     "        \n",
     "        for i in range(y_train.size(0)):\n",
     "            l = y_train[i].tolist()\n",
@@ -200,7 +201,8 @@
     "            for j in range(seq_len):\n",
     "                table[_y[j],_p[j]] += 1\n",
     "\n",
-    "    tp = torch.tensor([table[i,i] for i in range(c)])[2:]\n",
+    "    table = table.to(device)\n",
+    "    tp = torch.tensor([table[i,i] for i in range(c)], device=device)[2:]\n",
     "    d0sum = table[2:,2:].sum(dim=0)\n",
     "    d1sum = table[2:,2:].sum(dim=1)\n",
     "    allsum = d1sum.sum()\n",
@@ -227,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "intended-muscle",
+   "id": "separated-jumping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "hydraulic-cartoon",
+   "id": "destroyed-worse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "corrected-contents",
+   "id": "contemporary-canberra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "expressed-walter",
+   "id": "funny-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,29 +337,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "major-burlington",
+   "id": "smooth-pencil",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 epoch Dev F1 score: 0.0 -> 0.788341\n",
-      "2 epoch Dev F1 score: 0.788341 -> 0.901573\n",
-      "3 epoch Dev F1 score: 0.901573 -> 0.936911\n",
-      "4 epoch Dev F1 score: 0.936911 -> 0.945874\n",
-      "5 epoch Dev F1 score: 0.945874 -> 0.955698\n",
-      "6 epoch Dev F1 score: 0.955698 -> 0.959896\n",
-      "7 epoch Dev F1 score: 0.959896 -> 0.962612\n",
-      "9 epoch Dev F1 score: 0.962612 -> 0.967095\n",
-      "10 epoch Dev F1 score: 0.967095 -> 0.967469\n",
-      "11 epoch Dev F1 score: 0.967469 -> 0.969151\n",
-      "12 epoch Dev F1 score: 0.969151 -> 0.969357\n",
-      "13 epoch Dev F1 score: 0.969357 -> 0.971682\n",
-      "14 epoch Dev F1 score: 0.971682 -> 0.972498\n",
-      "20 epoch Dev F1 score: 0.972498 -> 0.97314\n",
-      "22 epoch Dev F1 score: 0.97314 -> 0.975356\n",
-      "23"
+      "1 epoch Dev F1 score: 0.0 -> 0.724431\n",
+      "2"
      ]
     }
    ],
@@ -374,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dynamic-heaven",
+   "id": "first-schema",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "artistic-cholesterol",
+   "id": "incorrect-mouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "peaceful-cisco",
+   "id": "endangered-motivation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powered-ordering",
+   "id": "sublime-original",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-bible",
+   "id": "accomplished-parallel",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -439,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "related-links",
+   "id": "hazardous-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "standard-blast",
+   "id": "parallel-washer",
    "metadata": {},
    "outputs": [],
    "source": []
